updated markdown to fix tasks and removed option for browser

--- a/.github/ISSUE_TEMPLATE/enhancement.yml
+++ b/.github/ISSUE_TEMPLATE/enhancement.yml
@@ -71,10 +71,11 @@ body:
         - [ ] Task 1
         - [ ] Task 2
         - [ ] Task 3
-      value: |
-        - [ ] 
-        - [ ] 
-        - [ ] 
+      value: |-
+        - [ ] Task 1
+        - [ ] Task 2
+        - [ ] Task 3
+
 
   - type: input
     id: related-issues
