--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -32,18 +32,6 @@ body:
     validations:
       required: true
 
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-        - Other
-
   - type: textarea
     id: logs
     attributes:
@@ -61,10 +49,7 @@ body:
         Update documentation
         Add logging
         etc...
-      value: |
-        - [ ] 
-        - [ ] 
-        - [ ] 
-      render: markdown
-
-  
+      value: |-
+        - [ ] Task 1
+        - [ ] Task 2
+        - [ ] Task 3
